app/assets/stylesheets/formadmin/layouts/_main.scss
#active_admin_content {
  padding: 30px 30px 0;
  flex: 1;

  @include clearfix;

  #main_content_wrapper {
    float: left;
    width: 100%;

    @include clearfix;
  }

  // Sidebar Stuffs
  &.with_sidebar #main_content {
    margin-right: 300px;
  }

  #sidebar {
    float: left;
    margin-left: -270px;
    width: 270px;

    .panel_contents {
      padding: 0;

      > div {
        padding: 15px;
      }
    }
  }

  // Medias
  @media #{$largest-phone-screen} {
    padding: 15px 15px 0;

    &.with_sidebar #main_content {
      margin-right: 0;
    }

    #main_content_wrapper {
      float: none;
    }

    #sidebar {
      float: none;
      margin-left: 0;
      margin-top: 40px;
      width: 100%;
    }
  }
}

